--- a/templates/base.html
+++ b/templates/base.html
@@ -487,11 +487,33 @@
             <div class="col-lg-4">
                 <h5 class="footer-heading">Contact</h5>
                 <div class="text-secondary small">
-                    <a href="https://www.google.com/maps/place/Sellux+Plaster+LTD(Plasterboard+and+ceiling+materials)/@5.5787557,-0.2614957,17z/data=!3m1!4b1!4m6!3m5!1s0xfdf9bb89bcdaccb:0x35642fad98c1e46e!8m2!3d5.5787557!4d-0.2589208!16s%2Fg%2F11lv8l344t?entry=ttu&g_ep=EgoyMDI2MDEwNy4wIKXMDSoASAFQAw%3D%3D">
-                     Odokor, Dr. Busia Highway, Accra, Ghana
-                    </a>
-                    <p class="d-flex mb-3"><i class="bi bi-telephone text-primary me-3"></i> 055 208 8784 / 054 992 6773</p>
-                    <p class="d-flex mb-3"><i class="bi bi-envelope text-primary me-3"></i> selluxplaster@gmail.com</p>
+                    <p class="d-flex mb-3">
+                     <i class="bi bi-geo-alt text-primary me-3"></i>
+                      <a href="https://www.google.com/maps/place/Sellux+Plaster+LTD(Plasterboard+and+ceiling+materials)/@5.5787557,-0.2614957,17z/data=!3m1!4b1!4m6!3m5!1s0xfdf9bb89bcdaccb:0x35642fad98c1e46e!8m2!3d5.5787557!4d-0.2589208!16s%2Fg%2F11lv8l344t?entry=ttu&g_ep=EgoyMDI2MDEwNy4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="text-white text-decoration-none">
+                      Odokor, Dr. Busia Highway, Accra, Ghana
+                      </a>
+                    </p>
+
+                    <p class="d-flex mb-3">
+                     <i class="bi bi-whatsapp text-primary me-3"></i>
+                      <a href="https://wa.me/233552088784" target="_blank" class="text-white text-decoration-none">
+                       055 208 8784 (Whatsapp)
+                      </a>
+                    </p>
+
+                    <p class="d-flex mb-3">
+                     <i class="bi bi-telephone text-primary me-3"></i>
+                      <a href="tel:+233549926773" class="text-white text-decoration-none">
+                       054 992 6773 (Phone)
+                      </a>
+                    </p>
+
+                    <p class="d-flex mb-3">
+                     <i class="bi bi-envelope-open text-primary me-3"></i>
+                      <a href="mailto:selluxplaster@gmail.com" class="text-white text-decoration-none">
+                      selluxplaster@gmail.com
+                      </a>
+                    </p>
                 </div>
                 <div class="mt-4">
                     <div class="input-group">
